--- a/tasks/seed.yml
+++ b/tasks/seed.yml
@@ -6,7 +6,7 @@
     dest: "{{ seed_remote_temp_dir }}/seed.sql"
   register: _seed_seed_uploaded
 
-- name: database seed is spplied
+- name: database seed is applied
   shell: mysql -h "{{ _seed_mysql.host }}"
           --user="{{ _seed_mysql.user }}"
           --password={{ _seed_mysql.password }}
