grant sqlgrey read access to alias table

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,4 +8,6 @@
 
 - include: prepare.yml
 - include: schema.yml
+- include: sqlgrey.yml
+  when: _seed_config.features.sqlgrey.enabled == true
 - include: seed.yml
