--- a/tasks/schema.yml
+++ b/tasks/schema.yml
@@ -4,10 +4,11 @@
   template:
     src: "schema.sql.j2"
     dest: "{{ seed_remote_temp_dir }}/schema.sql"
-  register: _seed_schema_uploaded
+  register: _schema_uploaded
 
 - name: database schema is applied
   shell: mysql -h "{{ _seed_mysql.host }}"
           --user="{{ _seed_mysql.user }}"
           --password={{ _seed_mysql.password }}
           < "{{ seed_remote_temp_dir }}/schema.sql"
+  when: _schema_uploaded.changed
