--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,6 +14,7 @@ seed_default_config:
   postmaster_address: 'postmaster@example.com'
   accounts: []
   aliases: []
+  transports: []
   features:
     opendkim:
       enabled: true
